# wa-analysis

./: .gitignore  README.md  pyproject.toml
wa_analysis/: __init__.py  utils.py
wa_analysis/analysis_util/: __init__.py  analysis_util.py  preprocessing.py  processing_meta.py  sentiment_from_dict.py
wa_analysis/analysis_util/data/sentiment_lexicons/: sentiment_negative_scores.json  sentiment_positive_scores.json  transform_to_json.py
wa_analysis/ingest/: __init__.py  wa_ingest.py
wa_analysis/optimization_services/: __init__.py  optimization_services.py
